--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 services:
   backend:
     container_name: backend
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     stdin_open: true
     tty: true
     env_file:
